 #$ [#24776] *Weblinks icon hardcoded
 # [#24423] JHtml select.radiolist produces unnecessary label class suffix. Thanks Nikolai.
 # [#24372] plg_user_profile "Website" field XSS. Thanks Rouven and Christophe.
 # [#24790] Remove the border attribute. Thanks Rouven.
 # [#24837] [#24767] *Detect browser lang and cookie broken when using languagefilter. Thanks Christophe.

09-Feb-2011 Jean-Marie Simonet
 $ Correcting English spelling
 $ Deleting unused string
 ^ [#24828] Image j_button2_right.png missing from system template.
 # [#24812] *Banners Tracks export modal needs more height
 # [#24811] Enable editor-xtd buttons to have meaningful tooltips. Thanks Jonathan.
 # [#24750] If a system plugin tries to load its language file, Joomla! falls back to setting the default site language to English.
 # [#24797] Change pagination pagelist. Thanks Harald.

07-Feb-2011 Jean-Marie Simonet
 $ Correcting English spelling
 
06-Feb-2011 Jean-Marie Simonet
 # [#24743] Contact form typo - duplicate tag </label> for Email and Message. Thanks Peter and Elin.
 # [#24711] duplicate case in switch in ~/components/com_users/controller.php. Thanks Boris and Bill.

04-Feb-2011 Christophe Demko
 # [#24562] com_menu not looking for component xml file (Mark Dexter, Selene Feigl, marius van rijnsoever)
 # [#24693] Articles Category Module Gropu by Author error (Mark Dexter)
 # [#24731] Details of the components are in different orderings (Jean-Marie Simonet, Jozsef Tamas Herczeg, bill richardson)

04-Feb-2011 Jean-Marie Simonet
 #$ Deleting hard-coded colons
 # [#24710] Contact language is ignored in frontend. Thanks Christophe.
 # [#24735] Removes references to non-existing stylesheet. Thanks Rouven
 $# Normalizing some ini strings.

03-Feb-2011 Mark Dexter
 # [#24317] Module articles category - fatal error

03-Feb-2011 Jean-Marie Simonet
 #$ [#24724] Inconsistency in the Link Author article option. Thanks Bill.
 # [#24726] Link Author option lacks in Archived Articles menu item. Thanks Bill.